Mon Mar 16 18:19:31 GMT 1998 Tony Gale  <gale@gimp.org>
	* docs/gtkfaq.sgml:
	    - new question on modal windows
	    - new question on updating progressbars
	    - update all the links to gtk.org

Mon Mar 16 09:15:03 GMT 1998 Tony Gale  <gale@gimp.org>

	* docs/gtk_tut.sgml: 
	    - New subsection on colourselection from Tom Bech <tomb@ii.uib.no>
	    - Moved fileselection text to Miscallaneous Widgets section
	    - Started new section on the Text widget
	    - Removed Viewport, Paned, HPaned and VPaned from list of
	      NO_WINDOW widgets.

Mon Mar 16 01:33:36 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk-config.in: Added trailing newline, hopefully will
	  fix the problem with esac disappearing.

	* gtk/Makefile.am (test-debug): Improved test targets
	  will work with --enable-shared
    	    [From:  Raja R Harinath  <harinath@cs.umn.edu>]

  	* gtk.m4: Not all shells understand $(...).  Use `...` instead.
    	    [From:  Raja R Harinath  <harinath@cs.umn.edu>]
	- use AM_PATH_PROG instead of AM_CHECK_PROG, so the user
	  can specify programs not in their path.
  
	* Makefile.am: added gtk.m4 to EXTRA_DIST

Sun Mar 15 23:44:10 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkwidget.h:
	* gtk/gtkmenushell.c: 
	* gtk/gtkmenu.c: 
	* gtk/gtkmain.c: removed EXCLUSIVE_GRAB again, just disable modal
	event delivery for insensitive children.

Sun Mar 15 22:44:33 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkmenushell.c (gtk_menu_shell_button_release): for now reverted
	the last change, since it broke click-select-click menus for gimp.

Sun Mar 15 20:13:42 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkmain.c (gtk_quit_destructor): removed the ugly check whether
	we need gtk_widget_destroy or gtk_object_destroy. these functions are
	by no means allowed to act differently!

	* gtk/gtkmisc.c (gtk_misc_set_alignment): check for _DRAWABLE instead
	of _VISIBLE to operate on widget->window.
	(gtk_misc_set_padding): likewise.

	* gtk/gtkwidget.c: slightly reordered object arguments.
